--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "random-quote-machine",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://anandawasthi05.github.io/",
+  "homepage": "https://anandawasthi05.github.io/random-quote-machine",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
